fix spacing in footer

--- a/www/less/footer.less
+++ b/www/less/footer.less
@@ -37,5 +37,12 @@
 	}
 }
 .footer-contactinfo {
-	padding:@gutterSmall 0;	
+	padding:@gutterSmall 0;
+
+	&:first-child {
+		padding-top:0;
+	}
+	&:last-child {
+		padding-bottom: 0;
+	}
 }
